Made navbar responsive and fixed collapse responsiveness for all pages

--- a/css/background.css
+++ b/css/background.css
@@ -1,5 +1,5 @@
 html, body { 
-    background: url(../imgs/carpentyNew.JPG) no-repeat center center fixed;
+    background: url(../imgs/carpentyNew.JPG) no-repeat center center fixed; 
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
@@ -20,6 +20,13 @@ html, body {
     min-height: 80%;
     opacity: 0.3;
 
+}
+
+#introduction {
+    background-color: rgba(0, 0, 0, 0.7);
+    border-style: solid;
+    border-color: rgba(10, 100, 0, 0.7);
+        
 }
 
 
